added the reminders triggerType and corrrected sound proxyUrl parameter
